...
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Sites" id="JX0-i8-zBE">
                        <leftBarButtonItems>
                            <barButtonItem title="Item" image="logout" id="DLf-JG-It8">
                                <color key="tintColor" red="0.99215686270000003" green="0.79215686269999996" blue="0.1843137255" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <connections>
...
                                                <rect key="frame" x="43" y="0.0" width="292" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="URL" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="417-Cq-Mjz">
                                                        <rect key="frame" x="0.0" y="0.0" width="257" height="35"/>
                                                        <color key="tintColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="335" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Usuário/E-mail" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="ID4-4T-efe">
                                                        <rect key="frame" x="43" y="0.0" width="292" height="35"/>
                                                        <color key="tintColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
...
                                                <rect key="frame" x="0.0" y="0.0" width="335" height="35"/>
                                                <subviews>
                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Senha" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Bjf-1a-iGi">
                                                        <rect key="frame" x="43" y="0.0" width="257" height="35"/>
                                                        <color key="tintColor" red="0.14901960780000001" green="0.1960784314" blue="0.21960784310000001" alpha="1" colorSpace="calibratedRGB"/>
...
                        </connections>
                    </view>
                    <navigationItem key="navigationItem" title="Adicionar site" id="cOe-yz-00R">
                        <rightBarButtonItems>
                            <barButtonItem title="Item" image="save" id="Mb7-az-dhy">
...
                                                                <rect key="frame" x="0.0" y="0.0" width="167.5" height="35"/>
                                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                                <state key="normal" title="Entrar">
                                                                    <color key="titleColor" red="0.99215686274509807" green="0.792156862745098" blue="0.18431372549019609" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                                </state>
...
