...
    layer.shadowRadius = 5.0
    layer.shadowColor = color.cgColor
}

public func popup(withViewController vc: UIViewController, andTitle t: String?, andBory b: String?, andAction a: ((UIAlertAction) -> Void)?) {
    let alert = UIAlertController(title: t, message: b, preferredStyle: .alert)
    let okAction = UIAlertAction(title: "Ok", style: .default, handler: a)
    
    alert.addAction(okAction)
    
    vc.present(alert, animated: true, completion: nil)
}

...
